# Ctrlaw

./: .gitignore  DEPLOYMENT.md  README.md
tasks-board/: package-lock.json  package.json
tasks-board/src-tauri/: Cargo.toml  tauri.conf.json
tasks-board/src-tauri/capabilities/: default.json
tasks-board/src-tauri/icons/: icon.icns
tasks-board/src-tauri/src/: main.rs
tasks-board/src/app/: global-error.tsx  layout.tsx  page.tsx
tasks-board/src/app/calendar/: page.tsx
tasks-board/src/app/content/: page.tsx
tasks-board/src/app/memory/: page.tsx
tasks-board/src/app/office/: page.tsx
tasks-board/src/app/settings/: page.tsx
tasks-board/src/app/tasks/: page.tsx
tasks-board/src/app/team/: page.tsx
tasks-board/src/components/: AgentStatusBadge.tsx  NoAgentsPlaceholder.tsx
tasks-board/src/lib/: agent-context.tsx  config.ts  gateway-client.ts  i18n.tsx  tunnel-manager.ts  types.ts
