[package]
name = "mission-control"
version = "0.1.0"
description = "AI Agent Operations Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "mission_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
